--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  gap: 4px;
+  grid-template-columns: 20% 80%;
+  grid-template-rows: 10vh 5vh 80vh 5vh;
 }
 
 .container div {
@@ -17,6 +21,9 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: 20% 80%;
 }
 
 .logo {
@@ -26,15 +33,21 @@
 }
 
 .menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: span 2;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -60,15 +73,20 @@
 }
 
 .nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style-type: none;
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2/3;
+  grid-row: 3/4;
 }
 
 .article p {
@@ -97,6 +115,8 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
+  grid-row: 4/5;
 }
 
 .footer p {
